Encoding sample names in local 8 bit charset for SPHINX on Windows

BUG: 315460